backend login and signup

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
     <main>
       <h1>Log in</h1>
       <p style="color: red" id="error"></p>
-      <form method="post" id="form" action="/login/post">
+      <form method="POST" id="form" action="/login/post">
         <div>
           <label for="username">Username : </label>
           <input
@@ -27,7 +27,7 @@
             type="password"
             placeholder="Password"
             id="password"
-            name="password"
+            name="Password"
           />
         </div>
         <div>
