--- a/views/admin/nav.ejs
+++ b/views/admin/nav.ejs
@@ -1,5 +1,9 @@
 <aside>
     <nav>
-        Nav
+        <ul>
+            <li><a href="/admin">Dashboard</a></li>
+            <li><a href="/admin/users">Users</a></li>
+            <li><a href="/admin/courses">Courses</a></li>
+        </ul>
     </nav>
 </aside>
