--- a/public/css/admin/nav.css
+++ b/public/css/admin/nav.css
@@ -1,11 +1,13 @@
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  display: flex;
 }
 
-aside{
-    float: left;
-    background-color: red;
-    height: 100vh;
+aside {
+  background-color: red;
+  height: 100vh;
 }
