--- a/public/css/admin/courses.css
+++ b/public/css/admin/courses.css
@@ -1,15 +1,149 @@
-/* Google Fonts  */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
-
-/* Globals  */
-* {
-  font-family: "Poppins", sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
+body {
+  background-color: darkgray;
 }
+
+main {
+  width: 100%;
+  margin: 50px;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.new-user {
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  position: relative;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  outline: 0px;
+  border: 0px;
+  cursor: pointer;
+  vertical-align: middle;
+  appearance: none;
+  text-decoration: none;
+  font-weight: 700;
+  line-height: 1.71429;
+  font-size: 0.875rem;
+  text-transform: capitalize;
+  font-family: "Public Sans", sans-serif;
+  min-width: 64px;
+  padding: 6px 16px;
+  border-radius: 6px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  color: rgb(255, 255, 255);
+  background-color: rgb(32, 101, 209);
+  box-shadow: rgba(32, 101, 209, 0.24) 0px 8px 16px 0px;
+}
+
+.new-user:hover {
+  background-color: rgb(16, 57, 150);
+  box-shadow: none;
+}
+
+.add-new-student {
+  top: 100px;
+  right: 80px;
+  position: absolute;
+  background-color: #eee;
+  width: fit-content;
+  padding: 6px 16px;
+  box-shadow: rgba(83, 89, 100, 0.24) 0px 8px 16px 0px;
+  border-radius: 6px;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(-100px);
+  transition: 0.3s;
+  text-align: center;
+  z-index: 99999;
+}
+
+#error {
+  margin: 10px;
+}
+
+.add-new-student.active {
+  pointer-events: all;
+  opacity: 1;
+  user-select: all;
+  transform: translateY(0);
+}
+
+.add-new-student div {
+  margin: 3px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.add-new-student div input ,.add-new-student div select , .add-new-student div textarea{
+  border: none;
+  border-bottom: 1px solid rgb(76, 139, 240);
+  padding: 5px;
+  margin-left: 5px;
+  border-radius: 5px 3px;
+  transition: 0.1s;
+}
+.add-new-student div input:focus
+, add-new-student div select :focus {
+  outline: none;
+  border-bottom: 3px solid rgb(76, 139, 240);
+}
+
+.role {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.role div input {
+  margin-right: 10px;
+}
+
+#submit {
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  position: relative;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  outline: 0px;
+  border: 0px;
+  cursor: pointer;
+  vertical-align: middle;
+  appearance: none;
+  text-decoration: none;
+  font-weight: 700;
+  line-height: 1.71429;
+  font-size: 0.875rem;
+  text-transform: capitalize;
+  font-family: "Public Sans", sans-serif;
+  min-width: 64px;
+  padding: 6px 16px;
+  border-radius: 6px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  color: rgb(255, 255, 255);
+  background-color: rgb(45, 182, 27);
+  box-shadow: rgba(38, 209, 32, 0.24) 0px 8px 16px 0px;
+  margin-top: 10px;
+}
+
+#submit:hover {
+  background-color: rgb(16, 150, 21);
+  box-shadow: none;
+}
+
 
 /* Variables  */
 :root {
@@ -20,39 +154,22 @@
   --color_Light2: #c4c4c4;
 }
 
-/* =============== Home Section =============== */
-.home {
-  position: relative;
-  background-color: var(--color_Light1);
-  left: 260px;
-  width: calc(100% - 260px);
-  height: 100vh;
-  transition: all 0.5s ease;
-}
+/* ////////////////////////////////// */
 
-.container {
-  position: relative;
-  width: 80%;
-  height: 100%;
+.articles {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px 100px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  flex-wrap: wrap;
+  gap :30px;
+  margin-top: 10px;
 }
 
-/* the add / edit / ban styling */
-
-.inner {
-  padding: 25px 40px;
-  border: 2px solid black;
-  min-width: 40%;
-}
-
-h2 {
+article h2 {
+  margin: 0 0 18px 0;
+  font-family: "Bebas Neue", cursive;
+  font-size: 1.9rem;
+  letter-spacing: 0.06em;
+  color: var(--title-color);
+  transition: color 0.3s ease-out;
   position: relative;
   padding: 0 0 10px;
   margin-bottom: 10px;
@@ -70,185 +187,76 @@ h2:after {
   background-color: var(--color_Dark1);
 }
 
-.field {
-  width: 100%;
-  border: 2px solid rgba(0, 0, 0, 0);
-  outline: none;
-  background-color: rgba(230, 230, 230, 0.6);
-  padding: 0.5rem 1rem;
-  font-size: 1.1rem;
-  margin-bottom: 22px;
-  transition: 0.3s;
+article {
+  --img-scale: 1.001;
+  --title-color: black;
+  --link-icon-translate: -20px;
+  --link-icon-opacity: 0;
+  position: relative;
+  border-radius: 16px;
+  box-shadow: none;
+  background: #fff;
+  transform-origin: center;
+  transition: all 0.4s ease-in-out;
+  overflow: hidden;
+  width: 350px;
 }
 
-.field:hover {
-  background-color: rgba(0, 0, 0, 0.1);
+
+article img {
+  max-width: 100%;
+  transform-origin: center;
+  transform: scale(var(--img-scale));
+  transition: transform 0.4s ease-in-out;
 }
 
-textarea {
-  min-height: 150px;
+article a {
+  display: inline-flex;
+  align-items: center;
+  text-decoration: none;
+  color: #28666e;
 }
 
-.btn {
-  width: 100%;
-  padding: 0.5rem 1rem;
-  background-color: var(--color_Dark1);
-  color: #fff;
-  font-size: 1.1rem;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  transition: 0.3s;
+article a:focus {
+  outline: 1px dotted #28666e;
 }
 
-.btn:hover {
-  background-color: var(--color_Dark2);
+article a .icon {
+  min-width: 24px;
+  width: 24px;
+  height: 24px;
+  margin-left: 5px;
+  transform: translateX(var(--link-icon-translate));
+  opacity: var(--link-icon-opacity);
+  transition: all 0.3s;
 }
 
-.field:focus {
-  border: 2px solid rgba(30, 85, 250, 0.47);
-  background-color: #fff;
+/* using the has() relational pseudo selector to update our custom properties */
+article:has(:hover, :focus) {
+  --img-scale: 1.1;
+  --title-color: #28666e;
+  --link-icon-translate: 0;
+  --link-icon-opacity: 1;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
-#bigTitle {
+
+article h2 {
+  font-size: 1.9rem;
+  letter-spacing: 0.06em;
+  color: var(--title-color);
+  transition: color 0.3s ease-out;
   text-align: center;
 }
 
+.article-body {
+  padding: 24px;
+}
 
-article {
-    --img-scale: 1.001;
-    --title-color: black;
-    --link-icon-translate: -20px;
-    --link-icon-opacity: 0;
-    position: relative;
-    border-radius: 16px;
-    box-shadow: none;
-    background: #fff;
-    transform-origin: center;
-    transition: all 0.4s ease-in-out;
-    overflow: hidden;
-  }
-  
-  article a::after {
-    position: absolute;
-    inset-block: 0;
-    inset-inline: 0;
-    cursor: pointer;
-    content: "";
-  }
-  
-  /* basic article elements styling */
-  article h2 {
-    margin: 0 0 18px 0;
-    font-family: "Bebas Neue", cursive;
-    font-size: 1.9rem;
-    letter-spacing: 0.06em;
-    color: var(--title-color);
-    transition: color 0.3s ease-out;
-  }
-  
-  figure {
-    margin: 0;
-    padding: 0;
-    aspect-ratio: 16 / 9;
-    overflow: hidden;
-  }
-  
-  article img {
-    max-width: 100%;
-    transform-origin: center;
-    transform: scale(var(--img-scale));
-    transition: transform 0.4s ease-in-out;
-  }
-  
-  .article-body {
-    padding: 24px;
-  }
-  
-  article a {
-    display: inline-flex;
-    align-items: center;
-    text-decoration: none;
-    color: #28666e;
-  }
-  
-  article a:focus {
-    outline: 1px dotted #28666e;
-  }
-  
-  article a .icon {
-    min-width: 24px;
-    width: 24px;
-    height: 24px;
-    margin-left: 5px;
-    transform: translateX(var(--link-icon-translate));
-    opacity: var(--link-icon-opacity);
-    transition: all 0.3s;
-  }
-  
-  /* using the has() relational pseudo selector to update our custom properties */
-  article:has(:hover, :focus) {
-    --img-scale: 1.1;
-    --title-color: #28666e;
-    --link-icon-translate: 0;
-    --link-icon-opacity: 1;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-  }
-  
-  
-  /************************ 
-  cards layout
-  **************************/
-  
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-    padding: 48px 0;
-    font-family: "Figtree", sans-serif;
-    font-size: 1.2rem;
-    line-height: 1.6rem;
-    min-height: 100vh;
-  }
-  
-  .articles {
-    display: grid;
-    max-width: 1200px;
-    margin-inline: auto;
-    padding-inline: 24px;
-    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-    gap: 24px;
-  }
-  
-  @media screen and (max-width: 960px) {
-    article {
-      container: card/inline-size;
-    }
-    .article-body p {
-      display: none;
-    }
-  }
-  
-  @container card (min-width: 380px) {
-    .article-wrapper {
-      display: grid;
-      grid-template-columns: 100px 1fr;
-      gap: 16px;
-    }
-    .article-body {
-      padding-left: 0;
-    }
-    figure {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-    }
-    figure img {
-      height: 100%;
-      aspect-ratio: 1;
-      object-fit: cover;
-    }
-  }
+.checked {
+  color: orange;
+}
+
+.stars {
+  margin-left: auto;
+}
