--- a/public/css/admin/courses.css
+++ b/public/css/admin/courses.css
@@ -1,5 +1,5 @@
 body {
-  background-color: darkgray;
+  background-color: rgb(255, 255, 255);
 }
 
 main {
@@ -195,7 +195,8 @@ article {
   position: relative;
   border-radius: 16px;
   box-shadow: none;
-  background: #fff;
+  background: #eee;
+  border: 2px solid #eee;
   transform-origin: center;
   transition: all 0.4s ease-in-out;
   overflow: hidden;
