--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,40 +4,66 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/signup.css" />
+    <link rel="stylesheet" href="css/login.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap"
+      rel="stylesheet"
+    />
     <title>Log in</title>
   </head>
   <body>
     <main>
-      <h1>Log in</h1>
-      <p style="color: red" id="error"></p>
+      <div class="background">
+        <div class="shape"></div>
+        <div class="shape"></div>
+    </div>
       <form method="POST" id="form" action="/login/post">
-        <div>
-          <label for="username">Username : </label>
-          <input
+      <h3>Welcome back </h3>
+      <h6>Log in!</h6>
+
+<div>
+                <label for="username">Username : </label>
+
+       <input
             type="text"
-            placeholder="Username"
             id="username"
             name="username"
           />
-        </div>
-        <div>
+      </div>
+      <div>
           <label for="password">Password : </label>
-          <input
+          <div class="password-input">
+
+  <input
             type="password"
-            placeholder="Password"
             id="password"
             name="Password"
           />
-        </div>
-        <div>
-          <button type="submit">Submit</button>
-        </div>
-      </form>
-      <div>
-        <a href="/forgetpassword">Forget Password</a>
-        <a href="/signup">Create account ? Sign up</a>
+          <i class="fas fa-eye toggle-password"></i></div>
+<div class="forgotpass">     
+      <a href="/forgetpassword">Forget Password ?</a>
+</div>
       </div>
+      <p style="color: red" id="error"></p>
+
+      <div>
+          <button type="submit">Sign in</button>
+        <div>  
+      <div class="anchors">  <a href="/signup">Don't have an account ? Sign up</a>
+        </div>
+        <div class="social">
+          <div class="go"><i class="fab fa-google"></i>  Google</div>
+          <div class="fb"><i class="fab fa-facebook"></i>  Facebook</div>
+        </div>
+</form>
+
     </main>
     <script type="module">
       // << Start >> form Validation
@@ -53,6 +79,20 @@
         }
       });
       // << End >> form Validation
+
+      //start for eye icon show and hide password
+      const togglePassword = document.querySelector('.toggle-password');
+const passwordInput = document.querySelector('#password');
+
+togglePassword.addEventListener('click', function () {
+  if (passwordInput.type === 'password') {
+    passwordInput.type = 'text';
+  } else {
+    passwordInput.type = 'password';
+  }
+});
+      //End of eye icon show and hide password
+
     </script>
   </body>
 </html>
