--- a/views/home/about.ejs
+++ b/views/home/about.ejs
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-    <link rel="stylesheet" href="css/about.css" />
-    <link rel="stylesheet" href="css/nav.css" />
-    <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/home/about.css" />
+    <link rel="stylesheet" href="css/home/nav.css" />
+    <link rel="stylesheet" href="css/home/footer.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -33,7 +33,7 @@
     </section>
     <section id="about-container">
       <div class="about-img">
-        <img src="img/logo/DSK-JF-light-logo.png" alt="" />
+        <img src="images/logos/DSK-JF-light-logo.png" alt="" />
       </div>
       <div class="about-text">
         <h2>
@@ -46,7 +46,7 @@
           corporis illo deserunt voluptatum.
         </p>
         <div class="about-fe">
-          <img src="img/about/about-container/fe1.png" alt="fe1" />
+          <img src="images/about/about-container/fe1.png" alt="fe1" />
           <div class="fe-text">
             <h5>400+ courses</h5>
             <p>
@@ -56,7 +56,7 @@
           </div>
         </div>
         <div class="about-fe">
-          <img src="img/about/about-container/fe2.png" alt="fe2" />
+          <img src="images/about/about-container/fe2.png" alt="fe2" />
           <div class="fe-text">
             <h5>Lifetime Access</h5>
             <p>
@@ -77,7 +77,7 @@
       </p>
       <div id="main-services-container">
         <section class="services-card">
-          <img src="img/home/features/add-project.jpeg" alt="project" />
+          <img src="images/home/features/add-project.jpeg" alt="project" />
           <h3>Add Project</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum,
@@ -86,7 +86,7 @@
         </section>
 
         <section class="services-card">
-          <img src="img/home/features/add-exam.jpeg" alt="exam" />
+          <img src="images/home/features/add-exam.jpeg" alt="exam" />
           <h3>Add Exam</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum,
@@ -95,7 +95,7 @@
         </section>
 
         <section class="services-card">
-          <img src="img/home/features/add-kahoot.jpeg" alt="kahoot" />
+          <img src="images/home/features/add-kahoot.jpeg" alt="kahoot" />
           <h3>Add Kahoot</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum,
@@ -112,16 +112,16 @@
         aliquam.
       </p>
       <div class="trsut-img">
-        <img src="img/about/trusted-by/google.png" alt="google" />
-        <img src="img/about/trusted-by/facebook.png" alt="facebook" />
-        <img src="img/about/trusted-by/dell.png" alt="dell" />
-        <img src="img/about/trusted-by/miu.png" alt="miu" />
-        <img src="img/about/trusted-by/amazon.png" alt="amazon" />
-        <img src="img/about/trusted-by/github.png" alt="github" />
+        <img src="images/about/trusted-by/google.png" alt="google" />
+        <img src="images/about/trusted-by/facebook.png" alt="facebook" />
+        <img src="images/about/trusted-by/dell.png" alt="dell" />
+        <img src="images/about/trusted-by/miu.png" alt="miu" />
+        <img src="images/about/trusted-by/amazon.png" alt="amazon" />
+        <img src="images/about/trusted-by/github.png" alt="github" />
       </div>
     </section>
     <!-- footer  -->
     <%- include('./components/footer.ejs') %>
-    <script src="js/nav.js"></script>
+    <script src="home/js/nav.js"></script>
   </body>
 </html>
