--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DSK-JF</title>
-    <link rel="stylesheet" href="css/home.css" />
-    <link rel="stylesheet" href="css/nav.css" />
-    <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/home/home.css" />
+    <link rel="stylesheet" href="css/home/nav.css" />
+    <link rel="stylesheet" href="css/home/footer.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -38,8 +38,8 @@
         praesentium non nisi.
       </p>
       <div class="btn">
-        <a class="blue" href="#">Learn more</a>
-        <a class="yellow" href="#">Visit courses</a>
+        <a class="blue" href="/about">Learn more</a>
+        <a class="yellow" href="/courses">Visit courses</a>
       </div>
     </section>
     <!-- features -->
@@ -51,7 +51,7 @@
       </p>
       <div id="main-services-container">
         <section class="services-card">
-          <img src="img/home/features/add-project.jpeg" alt="project" />
+          <img src="images/home/features/add-project.jpeg" alt="project" />
           <h3>Add Project</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum,
@@ -60,7 +60,7 @@
         </section>
 
         <section class="services-card">
-          <img src="img/home/features/add-exam.jpeg" alt="exam" />
+          <img src="images/home/features/add-exam.jpeg" alt="exam" />
           <h3>Add Exam</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum,
@@ -69,7 +69,7 @@
         </section>
 
         <section class="services-card">
-          <img src="img/home/features/add-kahoot.jpeg" alt="kahoot" />
+          <img src="images/home/features/add-kahoot.jpeg" alt="kahoot" />
           <h3>Add Kahoot</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum,
@@ -88,7 +88,7 @@
       </p>
       <div class="course-box">
         <div class="courses">
-          <img src="img/home/courses/c1.jpg" alt="" />
+          <img src="images/home/courses/c1.jpg" alt="" />
           <div class="details">
             <span>Updated 21/8/21</span>
             <h6>Course 1</h6>
@@ -104,7 +104,7 @@
           <div class="cost">$49.99</div>
         </div>
         <div class="courses">
-          <img src="img/home/courses/c2.jpeg" alt="" />
+          <img src="images/home/courses/c2.jpeg" alt="" />
           <div class="details">
             <span>Updated 21/8/21</span>
             <h6>Course 2</h6>
@@ -120,7 +120,7 @@
           <div class="cost">$49.99</div>
         </div>
         <div class="courses">
-          <img src="img/home/courses/c3.jpeg" alt="" />
+          <img src="images/home/courses/c3.jpeg" alt="" />
           <div class="details">
             <span>Updated 21/8/21</span>
             <h6>Course 3</h6>
@@ -136,7 +136,7 @@
           <div class="cost">$49.99</div>
         </div>
         <div class="courses">
-          <img src="img/home/courses/c4.jpeg" alt="" />
+          <img src="images/home/courses/c4.jpeg" alt="" />
           <div class="details">
             <span>Updated 21/8/21</span>
             <h6>Course 4</h6>
@@ -152,7 +152,7 @@
           <div class="cost">$49.99</div>
         </div>
         <div class="courses">
-          <img src="img/home/courses/c5.jpg" alt="" />
+          <img src="images/home/courses/c5.jpg" alt="" />
           <div class="details">
             <span>Updated 21/8/21</span>
             <h6>Course 5</h6>
@@ -168,7 +168,7 @@
           <div class="cost">$49.99</div>
         </div>
         <div class="courses">
-          <img src="img/home/courses/c6.jpg" alt="" />
+          <img src="images/home/courses/c6.jpg" alt="" />
           <div class="details">
             <span>Updated 21/8/21</span>
             <h6>Course 6</h6>
@@ -217,7 +217,7 @@
       </p>
       <div class="expert-box">
         <div class="profile">
-          <img src="img/home/experts/dalia.png" alt="dalia" />
+          <img src="images/home/experts/dalia.png" alt="dalia" />
           <h6>Dalia</h6>
           <div class="pro-links">
             <i class="fab fa-facebook-f"></i>
@@ -227,7 +227,7 @@
         </div>
 
         <div class="profile">
-          <img src="img/home/experts/sarah.png" alt="sarah" />
+          <img src="images/home/experts/sarah.png" alt="sarah" />
           <h6>Sarah</h6>
           <div class="pro-links">
             <i class="fab fa-facebook-f"></i>
@@ -237,7 +237,7 @@
         </div>
 
         <div class="profile">
-          <img src="img/home/experts/koki.png" alt="koki" />
+          <img src="images/home/experts/koki.png" alt="koki" />
           <h6>Karen</h6>
           <div class="pro-links">
             <i class="fab fa-facebook-f"></i>
@@ -247,7 +247,7 @@
         </div>
 
         <div class="profile">
-          <img src="img/home/experts/joe.png" alt="joe" />
+          <img src="images/home/experts/joe.png" alt="joe" />
           <h6>Joe</h6>
           <div class="pro-links">
             <i class="fab fa-facebook-f"></i>
@@ -258,7 +258,7 @@
 
         <div class="profile farid">
           <i class="fa-solid fa-crown"></i>
-          <img src="img/home/experts/farid.png" alt="farid" />
+          <img src="images/home/experts/farid.png" alt="farid" />
           <h6>Farid</h6>
           <div class="pro-links">
             <i class="fab fa-facebook-f"></i>
@@ -270,7 +270,7 @@
     </section>
     <!-- footer  -->
     <%- include('./components/footer.ejs') %>
-    <script src="js/nav.js"></script>
-    <script src="js/home.js"></script>
+    <script src="js/home/nav.js"></script>
+    <script src="js/home/home.js"></script>
   </body>
 </html>
