--- a/public/css/admin/users.css
+++ b/public/css/admin/users.css
@@ -262,3 +262,23 @@ button i {
 .menu-link a:hover {
   color: #a7a6a6;
 }
+
+/* no data found */
+.no-data{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* border: 1px solid #4b4a4a; */
+  font-size: 25px;
+  height: 400px;
+  border-radius: 10px;
+  background-color: #eeeeee;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  margin-top: 5rem;
+  font-family: "Public Sans", sans-serif;
+}
+.no-data i{
+  padding: 10px;
+  font-size: 30px;
+}
