--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -60,7 +60,7 @@
           />
           <i class="fas fa-eye toggle-password"></i></div>
       </div>
-      <div>
+      <!-- <div>
         <label for="password">Confirm Password : </label>
         <div class="password-input">
 
@@ -70,11 +70,11 @@
           name="Password"
         />
         <i class="fas fa-eye toggle-password"></i></div>
-    </div>
-  </div>
+    </div> -->
+  <!-- </div> -->
   <p style="color: red" id="error"></p>
 
-  <div>
+  <!-- <div> -->
         <div>
           <button type="submit">Sign up</button>
         </div>
