organizing the code

--- a/views/admin/nav.ejs
+++ b/views/admin/nav.ejs
@@ -1,4 +1,4 @@
-<aside>
+<!-- <aside>
     <nav>
         <ul>
             <li><a href="/admin">Dashboard</a></li>
@@ -7,4 +7,163 @@
             <li><a href="/logout">Logout</a></li>
         </ul>
     </nav>
-</aside>
+</aside> -->
+<div class="sidebar close">
+  <!-- ========== Logo ============  -->
+  <a href="#" class="logo-box">
+    <img src="/img/logo/DSK-JF-drak-transparent-logo.png" />
+    <!-- <i class='bx bxl-xing'></i> -->
+    <div class="logo-name"></div>
+  </a>
+
+  <!-- ========== List ============  -->
+  <ul class="sidebar-list">
+    <!-- -------- Non Dropdown List Item ------- -->
+    <li>
+      <div class="title">
+        <a href="/admin" class="link">
+          <box-icon name="user"></box-icon>
+          <i class="bx bx-grid-alt"></i>
+          <span class="name">Dashboard</span>
+        </a>
+        <!-- <i class='bx bxs-chevron-down'></i> -->
+      </div>
+      <div class="submenu">
+        <a href="/admin" class="link submenu-title">Dashboard</a>
+        <!-- submenu links here  -->
+      </div>
+    </li>
+
+    <!-- -------- Dropdown List Item ------- -->
+    <li class="dropdown">
+      <div class="title">
+        <a href="#" class="link">
+          <i class="bx bx-user"></i> <span class="name">Students</span>
+        </a>
+        <i class="bx bxs-chevron-down"></i>
+      </div>
+      <div class="submenu">
+        <a href="#" class="link submenu-title">Students</a>
+        <a href="#" class="link">Details</a>
+        <a href="/admin/student/add" class="link">Add Student</a>
+        <a href="/admin/student/search-edit" class="link">Edit Student</a>
+        <a href="/admin/student/search-ban" class="link">Ban Student</a>
+      </div>
+    </li>
+
+    <!-- -------- Dropdown List Item ------- -->
+    <li class="dropdown">
+      <div class="title">
+        <a href="#" class="link">
+          <i id="fawsomeicons" class="fas fa-chalkboard-teacher"></i>
+          <span class="name">Courses</span>
+        </a>
+        <i class="bx bxs-chevron-down"></i>
+      </div>
+      <div class="submenu">
+        <a href="#" class="link submenu-title">Courses</a>
+        <a href="#" class="link">Details</a>
+        <a href="/admin/Add-course" class="link">Add Course</a>
+        <a href="/admin/search-edite-courses" class="link">Edit Course</a>
+        <a href="/admin/search-ban-courses" class="link">Remove Course</a>
+      </div>
+    </li>
+
+    <!-- -------- Dropdown List Item ------- -->
+    <li class="dropdown">
+      <div class="title">
+        <a href="#" class="link">
+          <i id="fawsomeicons" class="fa-solid fa-diagram-project"></i>
+          <span class="name">Projects</span>
+        </a>
+        <i class="bx bxs-chevron-down"></i>
+      </div>
+      <div class="submenu">
+        <a href="#" class="link submenu-title">Projects</a>
+        <a href="#" class="link">Details</a>
+        <a href="/joe - projects/projects/Add-projects.html" class="link"
+          >Add Project</a
+        >
+        <a href="/joe - projects/projects/searcheditp.html" class="link"
+          >Edit Project</a
+        >
+        <a href="/joe - projects/projects/searchremovep.html" class="link"
+          >Remove Projects</a
+        >
+      </div>
+    </li>
+
+    <!-- -------- Dropdown List Item ------- -->
+    <li class="dropdown">
+      <div class="title">
+        <a href="#" class="link">
+          <i id="fawsomeicons" class="fa-solid fa-note-sticky"></i>
+          <span class="name">Exams</span>
+        </a>
+        <i class="bx bxs-chevron-down"></i>
+      </div>
+      <div class="submenu">
+        <a href="#" class="link submenu-title">Exams</a>
+        <a href="#" class="link">Details</a>
+        <a href="/admin/Add-Exman" class="link">Add Exam</a>
+        <a href="/admin/search-edite-Exmans" class="link">Edit Exam</a>
+        <a href="/admin/search-ban-Exmans" class="link">Remove Exam</a>
+      </div>
+    </li>
+
+    <!-- -------- Dropdown List Item ------- -->
+    <li class="dropdown">
+      <div class="title">
+        <a href="#" class="link">
+          <i id="fawsomeicons" class="fa-solid fa-k"></i>
+          <span class="name">Kahoot</span></a
+        >
+        <i class="bx bxs-chevron-down"></i>
+      </div>
+      <div class="submenu">
+        <a href="#" class="link submenu-title">Kahoot</a>
+        <a href="#" class="link">Details</a>
+        <a href="#" class="link">Add Kahoot</a>
+        <a href="#" class="link">Edit Kahoot</a>
+        <a href="#" class="link">Remove Kahoot</a>
+      </div>
+    </li>
+    <!-- -------- Non Dropdown List Item ------- -->
+    <li>
+      <div class="title">
+        <a href="#" class="link">
+          <i class="bx bx-line-chart"></i>
+          <span class="name">Analysis</span>
+        </a>
+        <!-- <i class='bx bxs-chevron-down'></i> -->
+      </div>
+      <div class="submenu">
+        <a href="#" class="link submenu-title">Analysis</a>
+        <!-- submenu links here  -->
+      </div>
+    </li>
+
+    <!-- -------- Non Dropdown List Item ------- -->
+    <li>
+      <div class="title">
+        <a href="#" class="link">
+          <i class="bx bx-cog"></i>
+          <span class="name">Settings</span>
+        </a>
+        <!-- <i class='bx bxs-chevron-down'></i> -->
+      </div>
+      <div class="submenu">
+        <a href="#" class="link submenu-title">Settings</a>
+        <!-- submenu links here  -->
+      </div>
+    </li>
+  </ul>
+</div>
+
+<!-- ============= Home Section =============== -->
+<section class="home">
+  <div class="toggle-sidebar">
+    <i class="bx bx-menu"></i>
+    <div class="text">DSK JF</div>
+  </div>
+</section>
